Revert "Fix view height on mobile safari"
This reverts commit 4e616d162a84f3543ff53f31ec582d6b9c757dee.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,7 +12,6 @@
 body, html {
     width: 100vw;
     height: 100vh;
-    height: -webkit-fill-available; /* mobile viewport bug fix */
     margin: 0;
     padding: 0;
     font-size: 16px;
